# stock_analytics

./: README.md  analysis.py  pyproject.toml  requirements.txt  valuation_engine.py  wip.ipynb
financial_forecast/: financial_forecast.py  forecast_financials.py
plotter/: plot.py
scraper/: __init__.py  information_load.py  init.py  peer_universe.py  scrape.py
src/: __init__.py
src/financial_forecast/: __init__.py  forecast_financials.py  readme.md  simulation.py
src/plotter/: __init__.py  plot.py  plotly_theme.py
src/scraper/: __init__.py  information_load.py  peer_universe.py
src/streamlit/: main.py
src/streamlit/helpers/: yf_extractor.py
src/streamlit/pages/: 1_peer_universe.py  2_analysis.py  3_valuation.py
src/utils/: peer_scraper.py  plotter.py  statistics_load.py  yf_extractor.py
tests/: financial_forecast_test.py
utils/: peer_scraper.py  statistics_load.py
